fixed path issues and reverted to previous version

--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -56,7 +56,7 @@
 
 /* card css */
 body {
-    background-color: #000000; /* Match the color from index.css */
+    background-color: #000000;
     font-family: sans-serif; 
     -webkit-font-smoothing: antialiased;
     margin-top: 0px;
